--- a/projects/addon-editor/package.json
+++ b/projects/addon-editor/package.json
@@ -27,6 +27,7 @@
         "@tiptap/extension-text-align": "2.0.0-beta.31",
         "@tiptap/extension-text-style": "2.0.0-beta.26",
         "@tiptap/extension-underline": "2.0.0-beta.25",
+        "@tiptap/extension-placeholder": "2.0.0-beta.53",
         "@tiptap/starter-kit": "2.0.0-beta.189",
         "prosemirror-collab": "~1.3.0",
         "prosemirror-commands": "~1.3.0",
